<resources>
    <string name="app_name">VocabularyNote</string>
    <string name="channel_name">DailyVocabulary</string>
    <string name="channel_description">DailyVocabularyNotification</string>
    <string name="CHANNEL_ID">DailyVocabularyNotificationID</string>

    <!--  onMainActivity  -->
    <string name="logInAsGuest"><font fgcolor='#dee3dd'>log in as </font>
        <u><i><font fgcolor='#ffffff'>Guest</font></i></u></string>

    <!--  inputWarningMessage  -->
    <string name="inputEmpty">輸入欄不可為空</string>

    <!-- onSignUp or onSignIn -->
    <string name="signUpPageSignIn"><u>Si</u>g<u>n In</u></string>
    <string name="signInPageSignUp"><u>Si</u>g<u>n Up</u></string>

    <string name="emailFormatInvalid">郵箱格式錯誤</string>
    <string name="passwordFormatInvalid">密碼格式錯誤</string>
    <string name="passwordConfirmationNotMatch">密碼確認不符</string>
    <string name="signUpEmailExist">郵箱已存在</string>
    <string name="invalidCredentials">郵箱不存在</string>
    <string name="errMessageTitle">錯誤</string>
    <string name="dialogCancelButton">好</string>

    <!--  modifyButtonText  -->
    <string name="modifyButtonChangeText">Change</string>
    <string name="modifyButtonSaveText">Save</string>

    <string name="ownDictionaryView"><u>view</u></string>
    <string name="newDictionary"><i><b>New Dictionary</b></i></string>
    <string name="ownDictionaryDescriptionLength"><i>Limited In Length 80</i></string>
    <string name="ownDictionaryPrompt">After creating a dictionary, you can reference the word groups Into your own dictionary.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="Search"><i>Search</i></string>
    <string name="delete_this_dictionary">Delete This Dictionary</string>

    <string name="navigationDrawerOpen">navigation_drawer_open</string>
    <string name="navigationDrawerClose">navigation_drawer_close</string>
    <string name="createYourOwnDictionary">Create Your Own Dictionary</string>
    <string name="test">An apple is a round fruit with red or green skin and a whitish inside.
description Excepteur sint occaecat cupidatat non proident description Excepteur sint occaecat cupidatat non proident…  </string>

    <string name="publicDictionaryPageVocabAutoSearchHint">搜尋單字 <i>look up…</i></string>
    <string name="ageErrMessage">請選擇年齡</string>

</resources>
