<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ownDictionaryPageDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainWhite"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ownDictionaryPageTopBar"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.075" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <ImageView
        android:id="@+id/ownDictionaryPagePhoto"
        android:layout_width="42.5dp"
        android:layout_height="42.5dp"
        android:layout_marginTop="12.5dp"
        app:layout_constraintStart_toEndOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_user_pic" />

    <Button
        android:id="@+id/ownDictionaryPageEditButton"
        android:layout_width="77.5dp"
        android:layout_height="22.5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="27.5dp"
        android:background="@drawable/bg_modify_green_round_button"
        android:drawableStart="@drawable/modify_pen"
        android:drawableLeft="@drawable/modify_pen"
        android:paddingStart="7.5dp"
        android:paddingLeft="7.5dp"
        android:paddingEnd="7.5dp"
        android:paddingRight="7.5dp"
        android:paddingBottom="3dp"
        android:text="Edit Dictionary"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/mainWhite"
        android:textSize="7sp"
        app:fontFamily="@font/avenirmedium"
        app:layout_constraintBottom_toBottomOf="@+id/ownDictionaryPageTopBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ownDictionaryPageDeleteButton"
        android:layout_width="102.5dp"
        android:layout_height="22.5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_delete_dictionary"
        android:drawableStart="@drawable/own_dictionary_trash_can"
        android:drawableLeft="@drawable/own_dictionary_trash_can"
        android:paddingStart="7.5dp"
        android:paddingLeft="7.5dp"
        android:paddingEnd="2.5dp"
        android:paddingRight="2.5dp"
        android:paddingBottom="3dp"
        android:text="@string/delete_this_dictionary"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="8sp"
        android:visibility="invisible"
        app:fontFamily="@font/avenirmedium"
        app:layout_constraintEnd_toStartOf="@+id/ownDictionaryPageSaveButton"
        app:layout_constraintTop_toTopOf="@+id/ownDictionaryPageSaveButton" />

    <Button
        android:id="@+id/ownDictionaryPageSaveButton"
        android:layout_width="35dp"
        android:layout_height="22.5dp"
        android:layout_marginStart="47.5dp"
        android:layout_marginLeft="47.5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_save_dictionary"
        android:paddingBottom="3dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:visibility="invisible"
        app:fontFamily="@font/avenirmedium"
        app:layout_constraintBottom_toBottomOf="@id/ownDictionaryPageTopBar"
        app:layout_constraintStart_toStartOf="@+id/ownDictionaryPageEditButton" />

    <TextView
        android:id="@+id/ownDictionaryPageMemberName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="15"
        android:text="User Name"
        android:textAlignment="center"
        android:textColor="@color/mainWhite"
        android:textSize="8sp"
        app:fontFamily="@font/avenirmedium"
        app:layout_constraintBottom_toBottomOf="@id/ownDictionaryPagePhoto"
        app:layout_constraintStart_toEndOf="@+id/ownDictionaryPagePhoto"
        app:layout_constraintTop_toTopOf="@id/ownDictionaryPagePhoto"
        app:lineHeight="11sp" />

    <EditText
        android:id="@+id/ownDictionaryPageDictionaryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12.5dp"
        android:layout_marginLeft="12.5dp"
        android:layout_marginBottom="7.5dp"
        android:background="@null"
        android:text="Own Dictionary 1"
        android:textColor="@color/mainWhite"
        android:textStyle="italic"
        app:fontFamily="@font/avenirheavy"
        app:layout_constraintBottom_toTopOf="@+id/ownDictionaryPageWordGroupCount"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <ImageView
        android:id="@+id/ownDictionaryPageDictionaryNamePen"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/modify_pen"
        android:visibility="invisible"
        app:backgroundTint="#73FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/ownDictionaryPageDictionaryName"
        app:layout_constraintStart_toEndOf="@+id/ownDictionaryPageDictionaryName"
        app:layout_constraintTop_toTopOf="@+id/ownDictionaryPageDictionaryName" />

    <TextView
        android:id="@+id/ownDictionaryPageWordGroupCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20 word groups"
        android:textAlignment="center"
        android:textColor="@color/mainWhite"
        android:textSize="10sp"
        android:textStyle="italic"
        app:fontFamily="@font/avenirbook"
        app:layout_constraintStart_toStartOf="@+id/ownDictionaryPageDictionaryName"
        app:layout_constraintTop_toTopOf="@+id/ownDictionaryPageEditButton"
        app:lineHeight="14sp" />

    <AutoCompleteTextView
        android:id="@+id/ownDictionaryPageQuery"
        android:layout_width="167.5dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/vocab_search_border"
        android:drawableStart="@drawable/grey_search_button"
        android:drawableLeft="@drawable/grey_search_button"
        android:drawablePadding="5dp"
        android:drawableTint="@color/secondaryGrey"
        android:hint="@string/Search"
        android:inputType="textAutoComplete"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="1dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/secondaryGrey"
        android:textColorHint="@color/secondaryGrey"
        android:textSize="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ownDictionaryPageTopBar"
        app:queryHint="@string/Search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wordGroupRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="177.5dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
